--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,7 @@ android {
 }
 
 dependencies {
+    compile project(':rn-fetch-blob')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-restart')
     compile project(':react-native-camera')
