--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'technica' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
 end
 
 post_install do |installer|
