--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^2.13.0",
+    "rn-fetch-blob": "^0.10.15",
     "yo": "2.0.3"
   },
   "devDependencies": {
