--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "firebase": "^7.6.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "~16.9.0",
@@ -17,28 +18,21 @@
     "react-native-animated-ellipsis": "^2.0.0",
     "react-native-camera": "^3.15.0",
     "react-native-elements": "^1.2.7",
-    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.3",
-    "react-native-on-layout": "^2.0.2",
     "react-native-paper": "^3.4.0",
-    "react-native-permissions": "^2.0.8",
-    "react-native-phone-input": "^0.2.4",
     "react-native-photo-view": "^1.5.2",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-scanner": "^1.3.1",
-    "react-native-reanimated": "~1.4.0",
     "react-native-restart": "^0.0.13",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-simple-toast": "^1.0.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10",
-    "rn-fetch-blob": "^0.12.0"
+    "react-navigation": "^4.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
